[gd_scene load_steps=18 format=3 uid="uid://tokw8f2g0iwb"]

[ext_resource type="Texture2D" uid="uid://bsmxv854t30se" path="res://Particles/PNG (Transparent)/spark_02.png" id="1_bbe1t"]
[ext_resource type="Script" path="res://Scenes/Particles/electric_bolt.gd" id="1_yh8cp"]
[ext_resource type="Texture2D" uid="uid://c053nmj8fnpml" path="res://Particles/PNG (Transparent)/spark_04.png" id="2_nk8v1"]

[sub_resource type="SphereShape3D" id="SphereShape3D_apsi8"]
radius = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lmher"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("1_bbe1t")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_mpxra"]
offsets = PackedFloat32Array(0.00843882, 0.540084, 1)
colors = PackedColorArray(0, 0.539313, 0.927803, 1, 0.0233833, 0.457893, 1, 1, 0, 0.522602, 0.882513, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_yavm1"]
gradient = SubResource("Gradient_mpxra")

[sub_resource type="Curve" id="Curve_048y6"]
_data = [Vector2(0, 0.772727), 0.0, 0.0, 0, 0, Vector2(0.380769, 1), 0.0, 0.0, 0, 0, Vector2(0.603846, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.772727), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_d8n7s"]
curve = SubResource("Curve_048y6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_a54nq"]
emission_shape = 1
emission_sphere_radius = 0.05
gravity = Vector3(0, 0, 0)
angular_velocity_min = -30.0
angular_velocity_max = 30.0
angle_max = 360.0
scale_min = 0.7
scale_max = 0.9
scale_curve = SubResource("CurveTexture_d8n7s")
color_ramp = SubResource("GradientTexture1D_yavm1")
hue_variation_max = 0.01
turbulence_noise_strength = 0.01

[sub_resource type="QuadMesh" id="QuadMesh_ra7qi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ma64v"]
transparency = 1
blend_mode = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_nk8v1")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_ydf3n"]
offsets = PackedFloat32Array(0.0337553, 0.485232, 1)
colors = PackedColorArray(0, 0.333333, 0.6, 0.705882, 0, 0.25098, 0.670588, 0.352941, 0, 0.301961, 0.501961, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5pb3e"]
gradient = SubResource("Gradient_ydf3n")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ubxid"]
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.3
linear_accel_min = -0.2
angle_max = 360.0
scale_min = 0.5
scale_max = 0.5
color_ramp = SubResource("GradientTexture1D_5pb3e")
hue_variation_min = -0.05
hue_variation_max = 0.05

[sub_resource type="QuadMesh" id="QuadMesh_og6ml"]

[sub_resource type="SphereShape3D" id="SphereShape3D_gcovm"]
radius = 0.25

[node name="ElectricBolt" type="AnimatableBody3D"]
collision_layer = 8
collision_mask = 0
input_ray_pickable = false
sync_to_physics = false
script = ExtResource("1_yh8cp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_apsi8")

[node name="Bolt" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_lmher")
amount = 40
lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_a54nq")
draw_pass_1 = SubResource("QuadMesh_ra7qi")

[node name="Sparks" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_ma64v")
amount = 20
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_ubxid")
draw_pass_1 = SubResource("QuadMesh_og6ml")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 53

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_gcovm")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="ImpulseTimer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
[connection signal="timeout" from="ImpulseTimer" to="." method="_on_impulse_timer_timeout"]
